MDEV-6185: Buildbot valgrind failure: Conditional jump or move in table_cond_selectivity